# qt-labs-qtgamepad

./: .qmake.conf  CMakeLists.txt  README.md  configure.cmake
examples/: CMakeLists.txt
examples/universalinput/: CMakeLists.txt
examples/universalinput/actionpong/: ActionMap.qml  Ball.qml  CMakeLists.txt  Paddle.qml  PaddleController.qml  main.qml
examples/universalinput/consolejoystickmonitor/: CMakeLists.txt  main.cpp
examples/universalinput/mousegrab/: CMakeLists.txt  main.cpp  main.qml
examples/universalinput/quickaction/: CMakeLists.txt  Controller.qml  GameObject.qml  GameObjectList.qml  Platform.qml  Player.qml  main.cpp  main.qml
examples/universalinput/simple/: CMakeLists.txt  gamepadmonitor.cpp  gamepadmonitor.h  main.cpp
examples/universalinput/virtualgamepad/: ButtonIsland.qml  CMakeLists.txt  JoyButton.qml  Joystick.qml  VirtualGamepad.qml  main.cpp  main.qml
src/: CMakeLists.txt
src/gamepad/: CMakeLists.txt  qgamepad.cpp  qgamepad.h
src/plugins/: CMakeLists.txt
src/plugins/joystickinputs/: CMakeLists.txt
src/plugins/joystickinputs/android/: CMakeLists.txt  androidjoystickinput.cpp  androidjoystickinput.h  androidjoystickinputplugin.cpp  androidjoystickinputplugin.h
src/plugins/joystickinputs/android/jar/: AndroidManifest.xml
src/plugins/joystickinputs/android/jar/src/org/qtproject/qt/android/universalinput/: QtJoystick.java  QtJoystickInputHandler.java
src/plugins/joystickinputs/ios/: CMakeLists.txt  iosjoystickinput.h  iosjoystickinput.mm  iosjoystickinputplugin.cpp  iosjoystickinputplugin.h
src/plugins/joystickinputs/linux/: CMakeLists.txt  linux.json  linuxjoystickinput.cpp  linuxjoystickinput.h  linuxjoystickinputplugin.cpp  linuxjoystickinputplugin.h
src/plugins/joystickinputs/macos/: CMakeLists.txt  macosjoystickinput.h  macosjoystickinput.mm  macosjoystickinputplugin.cpp  macosjoystickinputplugin.h
src/plugins/joystickinputs/windows/: CMakeLists.txt  windowsjoystickinput.cpp  windowsjoystickinput.h  windowsjoystickinputplugin.cpp  windowsjoystickinputplugin.h
src/plugins/mouseinputs/: CMakeLists.txt
src/plugins/mouseinputs/linux/: CMakeLists.txt  linuxmouseinput.cpp  linuxmouseinput.h  linuxmouseinputplugin.cpp  linuxmouseinputplugin.h
src/plugins/mouseinputs/macos/: CMakeLists.txt  macosmouseinput.h  macosmouseinput.mm  macosmouseinputplugin.cpp  macosmouseinputplugin.h
src/plugins/mouseinputs/windows/: CMakeLists.txt  windowsmouseinput.cpp  windowsmouseinput.h  windowsmouseinputplugin.cpp  windowsmouseinputplugin.h
src/quickactionstore/: CMakeLists.txt  qquickactionhandler.cpp  qquickactionhandler_p.h  qquickactionstore.cpp  qquickactionstore_p.h  qquickeventlistener.cpp  qquickeventlistener_p.h
src/quickgamepad/: CMakeLists.txt  qquickgamepad.cpp  qquickgamepad_p.h
src/quickuniversalinput/: CMakeLists.txt  qquickuniversalinput.cpp  qquickuniversalinput_p.h
src/universalinput/: CMakeLists.txt  qactionstore.cpp  qactionstore.h  qjoydevicemappingparser.cpp  qjoydevicemappingparser_p.h  qjoystickinput_p.h  qjoystickinputfactory.cpp  qjoystickinputfactory_p.h  qjoystickinputplugin_p.h  qmouseinput_p.h  qmouseinputfactory.cpp  qmouseinputfactory_p.h  qmouseinputplugin_p.h  qt_attribution.json  qtuniversalinputglobal.h  qtuniversalinputglobal_p.h  quniversalinput.cpp  quniversalinput.h  quniversalinput_p.h
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt
